--- a/app/views/issues/_top_hot_issues.html.erb
+++ b/app/views/issues/_top_hot_issues.html.erb
@@ -1,11 +1,12 @@
-  <table class="list issues">
-    <thead><tr>
-    <th>#</th>
-    <th><%=l(:field_project)%></th>
-    <th><%=l(:field_tracker)%></th>
-    <th><%=l(:field_priority)%></th>
-    <th><%=l(:field_subject)%></th>
-    </tr></thead>
+  <table class="list issues top_hot_issues">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th><%= link_to_top_issue_sort :tracker, l(:field_tracker), filter, order_by %></th>
+        <th><%= link_to_top_issue_sort :priority, l(:field_priority), filter, order_by %></th>
+        <th><%= link_to_top_issue_sort :subject, l(:field_subject), filter, order_by %></th>
+      </tr>
+    </thead>
     <tbody>
     <% for issue in issues %>
     <tr id="issue-<%= h(issue.id) %>" class="hascontextmenu <%= cycle('odd', 'even') %> <%= issue.css_classes %>">
@@ -13,7 +14,6 @@
         <%= check_box_tag("ids[]", issue.id, false, :style => 'display:none;', :id => nil) %>
         <%= link_to(issue.id, issue_path(issue)) %>
       </td>
-      <td class="project"><%= link_to_project(issue.project) %></td>
       <td class="tracker"><%= issue.tracker %></td>
       <td class="priority"><%= issue.priority.name %></td>
       <td class="subject">
